--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,11 +12,16 @@
             
             <%}else{%>
                 <!-- My home page-->
+
                 <div id="home_container">
-                    <p>Hey Welcome to my job portal?</p>
+                    <p>Hey Welcome to my job portal !! :)</p>
                     <button><a href="/users/sign-in">Sign In</a></button>
                     <button><a href="/users/sign-up">Sign Up</a></button>
+                    <button><a href="/users/job">Post a job</a></button>
+                    <button><a href="/users/sign-up">Broadcast</a></button>
+                    <button><a href="/users/Expert">Expert support</a></button>
                 </div>
+                
                 <%}%>
     </body>
 </html>
