--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,12 +8,14 @@
         <link rel="stylesheet" href="/css/sign_up.css">
         <link rel="stylesheet" href="/css/user_profile.css">
         <link rel="stylesheet" href="/css/job_create.css">
+        <link rel="stylesheet" href="/css/expert.css">
         <%- style %>
         
     </head>
 
     <body>
 
+        <%- include('header'); %>
 
         
         <main id="layout-main">
